# walkabout

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  ROADMAP.md  package-lock.json  pyproject.toml
.claude/: settings.json
.claude/skills/create-walkthrough/: SKILL.md
.claude/skills/walkabout-dev/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release.yml
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  TraceViewer.jsx  api.js  index.css  theme.js  utils.js
frontend/src/__tests__/: EditorPage.test.jsx  TabBar.test.jsx  TraceViewer.test.jsx  api.test.js  decorations.test.js  renderers.test.js  theme.test.js  utils.test.js
frontend/src/components/: Editor.jsx  FileBrowser.jsx  TabBar.jsx
frontend/src/pages/: EditorPage.jsx  SettingsPage.jsx  ViewerPage.jsx
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_cross_platform.py  test_execute.py  test_export.py  test_inprocess.py  test_main.py  test_packaging.py  test_plugin_integration.py  test_plugin_renderers.py  test_renderer_registry.py  test_windows_compat.py
walkabout/: __init__.py  __main__.py  app.py  config.py  export.py  runner.py  webview.py
walkabout/api/: __init__.py  config.py  env.py  execute.py  export.py  notes.py  renderers.py
walkabout/core/: arxiv_util.py  execute.py  execute_util.py  file_util.py  reference.py
walkabout/examples/: demo_walkthrough.py
walkabout/plugins/: __init__.py  base.py  manager.py
