[project]
name = "walkabout"
version = "0.1.0"
description = "Interactive code walkthrough editor — write, run, replay"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
sympy = ["sympy>=1.12"]
gui = ["pywebview>=5.0"]
dev = ["walkabout[torch,sympy,gui]"]

[project.scripts]
walkabout = "walkabout.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["walkabout"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "walkabout/frontend/dist"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
