[project]
name = "walkabout"
version = "0.2.0"
description = "Interactive code walkthrough editor — write, run, replay"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
sympy = ["sympy>=1.12"]
gui = ["pywebview>=5.0"]
dev = ["walkabout[torch,sympy,gui]"]

[project.scripts]
walkabout = "walkabout.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["walkabout"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long handled by formatter

[tool.ruff.lint.per-file-ignores]
"walkabout/export.py" = ["E101"]  # embedded JS template uses tabs
"walkabout/examples/demo_walkthrough.py" = ["F841", "SIM223", "SIM222"]  # @inspect variables intentionally unused in demo

[tool.ruff.lint.isort]
known-first-party = ["walkabout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
